<resources>
    <string name="app_name">Notes</string>
    <string name="tv_title_text">Заметки</string>
    <string name="state_of_notes_count">4 заметки</string>
    <string name="search">Поиск</string>
    <string name="datingNotes">Вчера</string>
    <string name="main_title">Заметки</string>
    <string name="notes_count">4 заметки</string>
    <string name="section_yesterday">Вчера</string>
    <string name="note_title">Система ваучеров</string>
    <string name="note_text">Человек подключается к Wi‑Fi</string>
    <string name="stateless_note_text">Человек подключается к ...</string>
</resources>